# tanksim

./: README.md
install/: local_setup.sh
install/interceptor/lib/interceptor/: interceptor_node
install/interceptor/share/interceptor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/route_initializer/lib/route_initializer/: route_initializer_node
install/route_initializer/share/route_initializer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tank_controller/lib/tank_controller/: tank_controller_node
install/tank_controller/share/tank_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: tanksim_launch.py
src/interceptor/: package.xml  setup.cfg  setup.py
src/interceptor/interceptor/: interceptor_node.py
src/route_initializer/: package.xml  setup.cfg  setup.py
src/route_initializer/route_initializer/: route_initializer_node.py
src/route_initializer/srv/: InitializeRoute.srv
src/tank_controller/: package.xml  setup.cfg  setup.py
src/tank_controller/srv/: InitializeObstacle.srv  InitializeRoute.srv
src/tank_controller/tank_controller/: obstacle_initializer_node.py  route_initializer_node.py  tank_controller_node.py
src/tank_interfaces/: CMakeLists.txt  package.xml
src/tank_interfaces/srv/: InitializeObstacle.srv  InitializeRoute.srv
src/tanksim/: CMakeLists.txt  package.xml
src/tanksim/include/tanksim/: tank.hpp  tank_frame.hpp
src/tanksim/src/: tank.cpp  tank_frame.cpp  tanksim.cpp
