<?xml version="1.0"?>
<package format="3">
  <name>tanksim</name>
  <version>0.0.0</version>
  <description>tanksim ros2 package.</description>
  <maintainer email="1-lion@163.com">sukha</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>libqt4-dev</depend> -->
  <depend>qtbase5-dev</depend>
  <depend>libqt5widgets5</depend>

  <!-- <build_depend>qt5-qmake</build_depend> -->
  <build_depend>rmw_implementation_cmake</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>